# skybound-endless-runner

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
assets/levels/: level1.txt
shaders/: Sprite.hlsl
src/: Animation.cpp  Animation.h  AnimationController.cpp  AnimationController.h  Camera.cpp  Camera.h  Collision.h  DigitFont.cpp  DigitFont.h  EndlessGenerator.cpp  EndlessGenerator.h  Enemy.cpp  Enemy.h  Input.cpp  Input.h  PhysicsBody.cpp  PhysicsBody.h  Pickup.cpp  Pickup.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Tilemap.cpp  Tilemap.h  Window.cpp  Window.h  main.cpp
